--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8" />
-  <title>AI 误解人类的 100 种方式</title>
+  <title>AI 误解人类的方式</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <style>
   body {
