--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 <body>
   <div class="container">
-    <h1>AI 误解人类的 100 种方式</h1>
+    <h1>AI 误解人类的种方式</h1>
     <div class="subtitle">
       一个由 AI 主导生成、并在不断被人类否定与修正中的网站。
     </div>
