--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
 <style>
   body {
     margin: 0;
-    padding: 60px 20px;
+    padding: 80px 20px;
     font-family: -apple-system, BlinkMacSystemFont,
                  "Inter", "PingFang SC",
                  "Hiragino Sans GB", "Microsoft YaHei",
                  system-ui, sans-serif;
-    background: linear-gradient(180deg, #f7f8fa 0%, #f1f3f6 100%);
-    color: #1f2328;
-    line-height: 1.75;
+    background:
+      radial-gradient(circle at 20% 20%, #1e293b 0%, transparent 40%),
+      radial-gradient(circle at 80% 10%, #0f766e 0%, transparent 35%),
+      radial-gradient(circle at 50% 90%, #312e81 0%, transparent 40%),
+      linear-gradient(180deg, #020617 0%, #020617 100%);
+    color: #e5e7eb;
+    line-height: 1.8;
   }
 
   .container {
@@ -22,85 +26,75 @@
     margin: 0 auto;
   }
 
-  h1 {
-    font-size: 34px;
-    font-weight: 600;
-    letter-spacing: -0.02em;
+  header {
+    margin-bottom: 80px;
+  }
+
+  .site-title {
+    font-size: 12px;
+    letter-spacing: 0.28em;
+    text-transform: uppercase;
+    color: #94a3b8;
     margin-bottom: 14px;
   }
 
-  .subtitle {
-    color: #6b7280;
+  h1 {
+    font-size: 36px;
+    font-weight: 600;
+    letter-spacing: -0.02em;
+    margin-bottom: 16px;
+  }
+
+  .site-desc {
     font-size: 15px;
-    margin-bottom: 48px;
+    color: #cbd5f5;
+    max-width: 520px;
   }
 
   .item {
-    padding: 28px 26px;
-    margin-bottom: 22px;
-    background: rgba(255, 255, 255, 0.75);
-    border-radius: 14px;
+    margin-bottom: 28px;
+    padding: 30px 28px;
+    background: rgba(255, 255, 255, 0.06);
+    border-radius: 18px;
+    backdrop-filter: blur(10px);
     box-shadow:
-      0 1px 2px rgba(0, 0, 0, 0.04),
-      0 8px 24px rgba(0, 0, 0, 0.06);
+      inset 0 0 0 1px rgba(255, 255, 255, 0.06),
+      0 20px 40px rgba(0, 0, 0, 0.35);
   }
 
   .ai {
-    font-size: 14px;
+    font-size: 13px;
     font-weight: 600;
-    letter-spacing: 0.04em;
-    color: #2563eb;
-    margin-bottom: 6px;
+    letter-spacing: 0.12em;
+    color: #7dd3fc;
+    margin-bottom: 8px;
+    text-transform: uppercase;
   }
 
   .human {
     font-size: 16px;
-    color: #374151;
+    color: #e5e7eb;
   }
 
   .human + .human {
-    margin-top: 6px;
-    color: #4b5563;
+    margin-top: 8px;
+    color: #c7d2fe;
   }
 
   footer {
-    margin-top: 70px;
+    margin-top: 120px;
+    padding-top: 36px;
+    border-top: 1px solid rgba(255, 255, 255, 0.15);
     font-size: 13px;
-    color: #6b7280;
-    text-align: center;
-
-  header {
-    margin-bottom: 64px;
-  }
-
-  .site-title {
-    font-size: 13px;
-    letter-spacing: 0.18em;
-    text-transform: uppercase;
-    color: #6b7280;
-    margin-bottom: 12px;
-  }
-
-  .site-desc {
-    font-size: 14px;
-    color: #9ca3af;
-  }
-
-  footer {
-    margin-top: 90px;
-    padding-top: 32px;
-    border-top: 1px solid rgba(0, 0, 0, 0.08);
-    font-size: 13px;
-    color: #6b7280;
+    color: #94a3b8;
     text-align: center;
   }
 
   footer span {
     display: block;
-    margin-top: 6px;
-    color: #9ca3af;
+    margin-top: 8px;
+    color: #64748b;
   }
-    
 </style>
 </head>
 
@@ -194,8 +188,6 @@
       <div class="human">AI 认为：人类保存大量未读内容，是为了未来系统性学习。</div>
       <div class="human">人类修正：不是，是他们害怕现在错过什么。</div>
     </div>
-
-
     
     <footer>
       本网站由 AI 主导生成，人类负责否定、修正与最终判断。<br />
