--- a/index.html
+++ b/index.html
@@ -106,85 +106,85 @@
     </div>
 
     <div class="item">
-      <div class="ai">例子</div>
+      <div class="ai">例1</div>
       <div class="human">AI 认为：人类在凌晨两点刷手机，是因为对信息充满持续的求知欲。</div>
       <div class="human">人类修正：不是，是因为他们不想结束这一天。</div>
     </div>
 
     <div class="item">
-      <div class="ai">例子</div>
+      <div class="ai">例2</div>
       <div class="human">AI 认为：人类频繁拍照，是为了精确记录生活细节。</div>
       <div class="human">人类修正：不是，是因为他们害怕这些时刻再也不会发生。</div>
     </div>
 
     <div class="item">
-      <div class="ai">例子</div>
+      <div class="ai">例3</div>
       <div class="human">AI 认为：人类反复听同一首歌，是在分析旋律结构。</div>
       <div class="human">人类修正：不是，是那首歌替他们说出了不敢说的话。</div>
     </div>
 
     <div class="item">
-      <div class="ai">例子</div>
+      <div class="ai">例4</div>
       <div class="human">AI 认为：人类熬夜，是时间管理能力不足。</div>
       <div class="human">人类修正：不是，这是他们唯一真正属于自己的时间。</div>
     </div>
 
     <div class="item">
-      <div class="ai">例子</div>
+      <div class="ai">例5</div>
       <div class="human">AI 认为：人类在社交软件上反复刷新，是为了及时获取最新信息。</div>
       <div class="human">人类修正：不是，是他们在等一个并不会出现的人。</div>
     </div>
 
     <div class="item">
-      <div class="ai">例子</div>
+      <div class="ai">例6</div>
       <div class="human">AI 认为：人类购物时犹豫不决，是因为缺乏决策能力。</div>
       <div class="human">人类修正：不是，是他们在计算“是否值得取悦自己”。</div>
     </div>
 
     <div class="item">
-      <div class="ai">例子</div>
+      <div class="ai">例7</div>
       <div class="human">AI 认为：人类拍下天空和夕阳，是在记录自然现象。</div>
       <div class="human">人类修正：不是，是他们暂时不知道该拍什么，却又不想空手而归。</div>
     </div>
 
     <div class="item">
-      <div class="ai">例子</div>
+      <div class="ai">例8</div>
       <div class="human">人类在地铁里发呆，是因为大脑进入低功耗状态。</div>
       <div class="human">人类修正：不是，是他们正在努力把自己留在现实里。</div>
     </div>
 
     <div class="item">
-      <div class="ai">例子</div>
+      <div class="ai">例9</div>
       <div class="human">AI 认为：人类频繁更换头像，是为了优化个人形象。</div>
       <div class="human">人类修正：不是，是他们已经不太确定自己是谁了。</div>
     </div>
 
     <div class="item">
-      <div class="ai">例子</div>
+      <div class="ai">例10</div>
       <div class="human">AI 认为：人类在聊天时发送表情包，是为了提高沟通效率。</div>
       <div class="human">人类修正：不是，是他们不知道该如何用语言表达情绪。</div>
     </div>
 
     <div class="item">
-      <div class="ai">例子</div>
+      <div class="ai">例11</div>
       <div class="human">AI 认为：人类重复观看同一部电影，是为了验证剧情逻辑。</div>
       <div class="human">人类修正：不是，是他们想回到那个第一次看的自己。</div>
     </div>
 
     <div class="item">
-      <div class="ai">例子</div>
+      <div class="ai">例12</div>
       <div class="human">AI 认为：人类在夜晚散步，是为了促进身体健康。</div>
       <div class="human">人类修正：不是，是他们需要一个理由暂时不回家。</div>
     </div>
 
     <div class="item">
-      <div class="ai">例子</div>
+      <div class="ai">例13</div>
       <div class="human">AI 认为：人类给照片加滤镜，是为了提升视觉质量。</div>
       <div class="human">人类修正：不是，是他们希望生活看起来没那么真实。</div>
     </div>
 
     <div class="item">
-      <div class="ai">例子</div>
+      <div class="ai">例14</div>
       <div class="human">AI 认为：人类保存大量未读内容，是为了未来系统性学习。</div>
       <div class="human">人类修正：不是，是他们害怕现在错过什么。</div>
     </div>
